// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/pr/changelog getChangeLogJSON filters unnecessary warns 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseURL": "https://gitlab.com/api/v4/",
    "baseURL": "https://gitlab.com/",
    "depName": "@renovate/no",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports gitlab enterprise and gitlab enterprise changelog 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseURL": "https://gitlab.com/api/v4/",
    "baseURL": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab-enterprise.example.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports gitlab enterprise and gitlab.com changelog 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseURL": "https://gitlab.com/api/v4/",
    "baseURL": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports gitlab enterprise and gitlab.com changelog 2`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseURL": "https://gitlab.com/api/v4/",
    "baseURL": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON supports node engines 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseURL": "https://gitlab.com/api/v4/",
    "baseURL": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON uses GitLab tags 1`] = `
Object {
  "hasReleaseNotes": true,
  "project": Object {
    "apiBaseURL": "https://gitlab.com/api/v4/",
    "baseURL": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.6.0...v5.6.1",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.6.0...v5.6.1",
      },
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.5.0...v5.6.0",
      },
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.5.0...v5.6.0",
      },
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.4.0...v5.5.0",
      },
      "date": undefined,
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.4.0...v5.5.0",
      },
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.2.0...v5.4.0",
      },
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": Object {
        "url": "https://gitlab.com/meno/dropzone/compare/v5.2.0...v5.4.0",
      },
      "version": "5.4.0",
    },
  ],
}
`;

exports[`workers/pr/changelog getChangeLogJSON works without GitLab 1`] = `
Object {
  "hasReleaseNotes": false,
  "project": Object {
    "apiBaseURL": "https://gitlab.com/api/v4/",
    "baseURL": "https://gitlab.com/",
    "depName": "renovate",
    "gitlab": "meno/dropzone",
    "repository": "https://gitlab.com/meno/dropzone/",
  },
  "versions": Array [
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.6.1",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2020-02-13T15:37:00.000Z",
      "releaseNotes": null,
      "version": "5.6.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": undefined,
      "releaseNotes": null,
      "version": "5.5.0",
    },
    Object {
      "changes": Array [],
      "compare": Object {},
      "date": "2018-08-24T14:23:00.000Z",
      "releaseNotes": null,
      "version": "5.4.0",
    },
  ],
}
`;
